--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,22 @@ p {
     margin: 0;
     padding: 0;
 }
-.container{
+.wrapper {
+    overflow: hidden;
     width: 100%;
+    min-height: 100%;
 }
+
 .header{
     background: url(../images/header.png);
     width: 100%;
     float: left;
+}
+.container{
+    max-width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 .title {
     font-size: 44px;
@@ -66,8 +75,6 @@ p {
     width: 25%;
     display: inline-block;
     text-align: center;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 .hero_photo {
     margin-bottom: 23px;
@@ -122,15 +129,19 @@ p {
 }
 
 .hero_add_form {
-    width: 50%;
+    width: 100%;
     text-align: center;
     margin: 85px auto 0;
     font-size: 14px;
+    background: #aaa;
 }
 .hero_add_form input[type=text]{
     width: 100%;
     height: 40px;
+    font-size: 24px;
     border: 1px solid rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    padding: 0 10px;
 }
 .hero_add_form label{
     float: left;
@@ -146,6 +157,12 @@ abbr {
     color: #bb0100;
     text-decoration: none;
 }
+.row{
+    width: 100%;
+    margin: 0 auto;
+    background: #ff0033;
+    padding-bottom: 31px;
+}
 
 .row:after {
     content: "";
@@ -156,7 +173,35 @@ abbr {
 .col {
     float: left;
     width: 50%;
+    background: #bb0100;
 }
+.input1 {
+    position: relative;
+    margin-right: 15px;
+    margin-left: 195px;
+}
+.input2 {
+    position: relative;
+    margin-left: 15px;
+    margin-right: 195px;
+}
+
+.hero_file {
+    max-width: 750px;
+    margin: 0 auto;
+}
+.dropzone_block {
+    max-width: 780px;
+    margin: 0 auto;
+}
+
+#myDropzone {
+    margin-top: 8px;
+    height: 108px;
+    min-height: 108px;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
 .btn_accept {
     font-size: 16px;
     font-weight: 400;
@@ -170,18 +215,26 @@ abbr {
     margin-top: 87px;
 }
 
+.btn_accept:hover{
+    cursor: pointer;
+}
+
 .footer {
     height: 92px;
     background-color: #272727;
     width: 100%;
     float: left;
 }
+.footer_block{
+    line-height: 92px;
+}
 .copyright {
     font-size: 12px;
-    line-height: 92px;
     float: left;
-    margin-left: 100px;
 }
 .links {
     float: right;
+}
+.links img {
+    vertical-align: middle;
 }
