--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ p {
     font-size: 14px;
     font-weight: 400;
     margin-top: 36px;
+    line-height: 24px;
 }
 
 .slider_nav {
@@ -139,7 +140,6 @@ p {
     text-align: center;
     margin: 85px auto 0;
     font-size: 14px;
-    background: #aaa;
 }
 .hero_add_form input[type=text]{
     width: 100%;
@@ -163,10 +163,12 @@ abbr {
     color: #bb0100;
     text-decoration: none;
 }
+abbr[title] {
+    text-decoration: none;
+}
 .row{
     width: 100%;
     margin: 0 auto;
-    background: #ff0033;
     padding-bottom: 31px;
 }
 
@@ -179,7 +181,6 @@ abbr {
 .col {
     float: left;
     width: 50%;
-    background: #bb0100;
 }
 .input1 {
     position: relative;
@@ -206,6 +207,42 @@ abbr {
     height: 108px;
     min-height: 108px;
     border: 1px solid rgba(0, 0, 0, 0.4);
+    padding: 0;
+}
+
+.dropzone .dz-preview {
+    margin: 0;
+    height: 100%;
+}
+.dropzone.dz-clickable * {
+    cursor: pointer;
+}
+
+.dropzone .dz-preview .dz-image {
+    width: 100%;
+    height: 100%;
+}
+
+.dropzone .dz-message {
+    font-size: 12px;
+    line-height: 108px;
+    margin: 0;
+}
+
+.btn_del {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 20;
+    width: 100%;
+    background: #fff;
+    color: #e8aa4e;
+    border: 1px solid #e8aa4e;
+    padding: 3px;
+}
+.btn_del:hover {
+    color: red;
+    border-color: red;
 }
 
 .btn_accept {
